# BPMNCode

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  install.ps1  install.sh  rustfmt.toml
.github/workflows/: release.yml
examples/: complex.bpmn  comprehensive.bpmn  main.bpmn  payment.bpmn  simple.bpmn  validation.bpmn
src/: error.rs  main.rs
src/diagnostics/: context_validator.rs  formatter.rs  mod.rs  suggestions.rs
src/lexer/: mod.rs  multi_file.rs
src/parser/: ast.rs  builder.rs  error.rs  mod.rs  recovery.rs  validator.rs
tests/: lexer.rs  parser.rs  validator.rs
