[package]
name = "bpmncode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bpmncode"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"]}
clap_derive = "4.5.40"
colored = "3.0.0"
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"


[dev-dependencies]
tempfile = "3.20.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
